vlib/v/checker/tests/no_interface_instantiation_a.vv
interface Speaker {}

fn main() {
	_ = Speaker{}
}
